apollo-federation/src/sources/connect/expand/tests/snapshots/connectors@interface-object.graphql.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/sources/connect/expand/tests/schemas/expand/interface-object.graphql
---
{
    "connectors_Itf_e_0": Connector {
        id: ConnectId {
            label: "connectors.json http: GET /itfs/{$this.id}/e",
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Itf.e),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "localhost",
                        ),
                    ),
                    port: Some(
                        4001,
                    ),
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [
                    StringTemplate {
                        parts: [
                            Constant(
                                Constant {
                                    value: "itfs",
                                    location: 1..5,
                                },
                            ),
                        ],
                    },
                    StringTemplate {
                        parts: [
                            Expression(
                                Expression {
                                    expression: Path(
                                        PathSelection {
                                            path: WithRange {
                                                node: Var(
                                                    WithRange {
                                                        node: $this,
                                                        range: Some(
                                                            0..5,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Key(
                                                            WithRange {
                                                                node: Field(
                                                                    "id",
                                                                ),
                                                                range: Some(
                                                                    6..8,
                                                                ),
                                                            },
                                                            WithRange {
                                                                node: Empty,
                                                                range: Some(
                                                                    8..8,
                                                                ),
                                                            },
                                                        ),
                                                        range: Some(
                                                            5..8,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    0..8,
                                                ),
                                            },
                                        },
                                    ),
                                    location: 7..15,
                                },
                            ),
                        ],
                    },
                    StringTemplate {
                        parts: [
                            Constant(
                                Constant {
                                    value: "e",
                                    location: 17..18,
                                },
                            ),
                        ],
                    },
                ],
                query: [],
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Path(
            PathSelection {
                path: WithRange {
                    node: Var(
                        WithRange {
                            node: $,
                            range: Some(
                                0..1,
                            ),
                        },
                        WithRange {
                            node: Empty,
                            range: Some(
                                1..1,
                            ),
                        },
                    ),
                    range: Some(
                        0..1,
                    ),
                },
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Implicit,
        ),
        spec: V0_1,
        request_variables: {
            $this,
        },
        response_variables: {},
    },
    "connectors_Query_itfs_0": Connector {
        id: ConnectId {
            label: "connectors.json http: GET /itfs",
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.itfs),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "localhost",
                        ),
                    ),
                    port: Some(
                        4001,
                    ),
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [
                    StringTemplate {
                        parts: [
                            Constant(
                                Constant {
                                    value: "itfs",
                                    location: 1..5,
                                },
                            ),
                        ],
                    },
                ],
                query: [],
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "c",
                            ),
                            range: Some(
                                3..4,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..4,
                ),
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        request_variables: {},
        response_variables: {},
    },
    "connectors_Query_itf_0": Connector {
        id: ConnectId {
            label: "connectors.json http: GET /itfs/{$args.id}",
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.itf),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "localhost",
                        ),
                    ),
                    port: Some(
                        4001,
                    ),
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [
                    StringTemplate {
                        parts: [
                            Constant(
                                Constant {
                                    value: "itfs",
                                    location: 1..5,
                                },
                            ),
                        ],
                    },
                    StringTemplate {
                        parts: [
                            Expression(
                                Expression {
                                    expression: Path(
                                        PathSelection {
                                            path: WithRange {
                                                node: Var(
                                                    WithRange {
                                                        node: $args,
                                                        range: Some(
                                                            0..5,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Key(
                                                            WithRange {
                                                                node: Field(
                                                                    "id",
                                                                ),
                                                                range: Some(
                                                                    6..8,
                                                                ),
                                                            },
                                                            WithRange {
                                                                node: Empty,
                                                                range: Some(
                                                                    8..8,
                                                                ),
                                                            },
                                                        ),
                                                        range: Some(
                                                            5..8,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    0..8,
                                                ),
                                            },
                                        },
                                    ),
                                    location: 7..15,
                                },
                            ),
                        ],
                    },
                ],
                query: [],
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "c",
                            ),
                            range: Some(
                                3..4,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "d",
                            ),
                            range: Some(
                                5..6,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..6,
                ),
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Explicit,
        ),
        spec: V0_1,
        request_variables: {
            $args,
        },
        response_variables: {},
    },
}
