apollo-federation/src/sources/connect/expand/tests/snapshots/connectors@sibling_fields.graphql.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/sources/connect/expand/tests/schemas/expand/sibling_fields.graphql
---
{
    "connectors_Query_f_0": Connector {
        id: ConnectId {
            label: "connectors. http: GET https://my.api/t",
            subgraph_name: "connectors",
            source_name: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.f),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: None,
            connect_template: Some(
                URLTemplate {
                    base: Some(
                        Url {
                            scheme: "https",
                            cannot_be_a_base: false,
                            username: "",
                            password: None,
                            host: Some(
                                Domain(
                                    "my.api",
                                ),
                            ),
                            port: None,
                            path: "/",
                            query: None,
                            fragment: None,
                        },
                    ),
                    path: [
                        StringTemplate {
                            parts: [
                                Constant(
                                    Constant {
                                        value: "t",
                                        location: 15..16,
                                    },
                                ),
                            ],
                        },
                    ],
                    query: [],
                },
            ),
            method: Some(
                Get,
            ),
            headers: {},
            body: None,
            method_expression: None,
            scheme: None,
            authority: None,
            source_path: None,
            source_query: None,
            connect_path: None,
            connect_query: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "k",
                            ),
                            range: Some(
                                0..1,
                            ),
                        },
                        Some(
                            SubSelection {
                                selections: [
                                    Field(
                                        None,
                                        WithRange {
                                            node: Field(
                                                "id",
                                            ),
                                            range: Some(
                                                4..6,
                                            ),
                                        },
                                        None,
                                    ),
                                ],
                                range: Some(
                                    2..8,
                                ),
                            },
                        ),
                    ),
                ],
                range: Some(
                    0..8,
                ),
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        request_variables: {},
        response_variables: {},
    },
    "connectors_T_b_0": Connector {
        id: ConnectId {
            label: "connectors. http: GET https://my.api/t/{$this.k.id}",
            subgraph_name: "connectors",
            source_name: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(T.b),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: None,
            connect_template: Some(
                URLTemplate {
                    base: Some(
                        Url {
                            scheme: "https",
                            cannot_be_a_base: false,
                            username: "",
                            password: None,
                            host: Some(
                                Domain(
                                    "my.api",
                                ),
                            ),
                            port: None,
                            path: "/",
                            query: None,
                            fragment: None,
                        },
                    ),
                    path: [
                        StringTemplate {
                            parts: [
                                Constant(
                                    Constant {
                                        value: "t",
                                        location: 15..16,
                                    },
                                ),
                            ],
                        },
                        StringTemplate {
                            parts: [
                                Expression(
                                    Expression {
                                        expression: Path(
                                            PathSelection {
                                                path: WithRange {
                                                    node: Var(
                                                        WithRange {
                                                            node: $this,
                                                            range: Some(
                                                                0..5,
                                                            ),
                                                        },
                                                        WithRange {
                                                            node: Key(
                                                                WithRange {
                                                                    node: Field(
                                                                        "k",
                                                                    ),
                                                                    range: Some(
                                                                        6..7,
                                                                    ),
                                                                },
                                                                WithRange {
                                                                    node: Key(
                                                                        WithRange {
                                                                            node: Field(
                                                                                "id",
                                                                            ),
                                                                            range: Some(
                                                                                8..10,
                                                                            ),
                                                                        },
                                                                        WithRange {
                                                                            node: Empty,
                                                                            range: Some(
                                                                                10..10,
                                                                            ),
                                                                        },
                                                                    ),
                                                                    range: Some(
                                                                        7..10,
                                                                    ),
                                                                },
                                                            ),
                                                            range: Some(
                                                                5..10,
                                                            ),
                                                        },
                                                    ),
                                                    range: Some(
                                                        0..10,
                                                    ),
                                                },
                                            },
                                        ),
                                        location: 18..28,
                                    },
                                ),
                            ],
                        },
                    ],
                    query: [],
                },
            ),
            method: Some(
                Get,
            ),
            headers: {},
            body: None,
            method_expression: None,
            scheme: None,
            authority: None,
            source_path: None,
            source_query: None,
            connect_path: None,
            connect_query: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "b",
                            ),
                            range: Some(
                                0..1,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..1,
                ),
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Implicit,
        ),
        spec: V0_1,
        request_variables: {
            $this,
        },
        response_variables: {},
    },
}
